--- a/Bro - Bot Gamer/index.html
+++ b/Bro - Bot Gamer/index.html
@@ -214,7 +214,7 @@
         <div class="logo-container">
             <img src="/assets/channel/Bro - Bot Gamer .png" alt="Bro-Bot Gamer Logo" class="logo">
             <div>
-                <h1 style="font-size: 50px;">Bro-Bot Gamer</h1>
+                <h1 style="font-size: 50px;">Bro-Bot amer</h1>
                 <p class="tagline">Epic AA & AAA Gameplays & Mods </p>
             </div>
         </div>
