--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                 </div>
 
                 <div class="mod-card">
-                    <div class="mod-image" style="background-image: url('/assets/mod/cybermod.jpg');"></div>
+                    <div class="mod-image" style="background-image: url('Bro_Youtube/blob/main/assets/channel/5073414.jpg');"></div>
                     <div class="mod-content">
                         <h3 class="mod-title">Cyberpunk 2077 - Enhanced Visuals</h3>
                         <p class="mod-desc">Complete visual overhaul with improved textures, lighting, and effects.</p>
